-
Bug
-
Resolution: Fixed
-
P4: Low
-
None
-
Qt Creator 15.0.0
-
Ubuntu 22.04 LTS
Creator installed from snapshot 213
-
c1f432ed1 (master)
- Make sure that clangd is being used for indexing source files.
- Create a new cmake-based Plain C++ Application project.
main.cpp is being displayed in the source code editor. Above that, the right combobox displays "using namespace std". - Move the cursor down to the empty line before "int main()".
The combobox still displays "using namespace std". - Move the cursor down into the main function.
The combobox' content changes to "main() -> int". - Move the cursor up again, to the empty line before "int main()", just like in step 3.
The combobox still displays "main() -> int".
Actual result: The combobox only updates when entering the function context, not when leaving it.
Expected result: The combobox also updates when leaving the function's context. This works when disabling clangd.
Found while working on Squish tests tst_CSUP01 and tst_memberoperator.
For Gerrit Dashboard: QTCREATORBUG-32088 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
609547,2 | LanguageClient: add artificial <Select Symbol> item to outline | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |