LanguageClient: add artificial <Select Symbol> item to outline

Use this item when the text cursor is currently outside of any symbol
that is shown in the outline.

Fixes: QTCREATORBUG-32088
Change-Id: Ie4d1478f764af03f5a02631c05f303ecf3335254
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>